@@ -1624,8 +1624,89 @@ void ibis::bord::dumpNames(std::ostream& out, const char* del) const {
 } // ibis::bord::dumpNames
 
 int ibis::bord::dump(std::ostream& out, const char* del) const {
-    return dump(out, nEvents, del);
+	if (strcmp(del, "JSON")==0)
+	    return dumpJSON(out, nEvents);
+	else
+	    return dump(out, nEvents, del);
 } // ibis::bord::dump
+
+/// Dump out the first nr rows in JSON format.
+int ibis::bord::dumpJSON(std::ostream& out, uint64_t nr) const {
+    const uint32_t ncol = columns.size();
+    if (ncol == 0 || nr == 0) return 0;
+
+    std::vector<const ibis::bord::column*> clist;
+    if (colorder.empty()) { // alphabetic ordering
+	for (ibis::part::columnList::const_iterator it = columns.begin();
+	     it != columns.end(); ++ it) {
+	    const ibis::bord::column* col =
+		dynamic_cast<const ibis::bord::column*>((*it).second);
+	    if (col != 0)
+		clist.push_back(col);
+	}
+    }
+    else if (colorder.size() == ncol) { // use external order
+	for (uint32_t i = 0; i < ncol; ++ i) {
+	    const ibis::bord::column* col =
+		dynamic_cast<const ibis::bord::column*>(colorder[i]);
+	    if (col != 0)
+		clist.push_back(col);
+	}
+    }
+    else { // externally specified ones are ordered first
+	std::set<const char*, ibis::lessi> names;
+	for (ibis::part::columnList::const_iterator it = columns.begin();
+	     it != columns.end(); ++ it)
+	    names.insert((*it).first);
+	for (uint32_t i = 0; i < colorder.size(); ++ i) {
+	    const ibis::bord::column* col =
+		dynamic_cast<const ibis::bord::column*>(colorder[i]);
+	    if (col != 0) {
+		clist.push_back(col);
+		names.erase(col->name());
+	    }
+	}
+	for (std::set<const char*, ibis::lessi>::const_iterator it =
+		 names.begin();
+	     it != names.end(); ++ it) {
+	    ibis::part::columnList::const_iterator cit = columns.find(*it);
+	    const ibis::bord::column* col =
+		dynamic_cast<const ibis::bord::column*>((*cit).second);
+	    if (col != 0)
+		clist.push_back(col);
+	}
+    }
+    if (clist.size() < ncol) return -3;
+
+    int ierr = 0;
+    // print the first row with error checking
+    out << "[[";
+    ierr = clist[0]->dump(out, 0U);
+    if (ierr < 0) return ierr;
+    for (uint32_t j = 1; j < ncol; ++ j) {
+	out << ",";
+	ierr = clist[j]->dump(out, 0U);
+	if (ierr < 0) return ierr;
+    }
+    out << "]";
+    if (! out) return -4;
+    // print the remaining rows without checking the return values from
+    // functions called
+    if (nr > nEvents) nr = nEvents;
+    for (uint32_t i = 1; i < nr; ++ i) {
+	out << ",[";
+	(void) clist[0]->dump(out, i);
+	for (uint32_t j = 1; j < ncol; ++ j) {
+	    out << ",";
+	    (void) clist[j]->dump(out, i);
+	}
+	out << "]";
+    }
+    if (! out)
+	ierr = -4;
+    out << "]";
+    return ierr;
+} // ibis::bord::dumpJSON
 
 /**
    Print the first nr rows of the data to the given output stream.
