@@ -48,6 +48,7 @@ public:
     virtual void dumpNames(std::ostream&, const char*) const;
     virtual int dump(std::ostream&, const char*) const;
     virtual int dump(std::ostream&, uint64_t, const char*) const;
+    virtual int dumpJSON(std::ostream&, uint64_t) const;
     virtual int dump(std::ostream&, uint64_t, uint64_t, const char*) const;
     virtual int backup(const char* dir, const char* tname=0,
 		       const char* tdesc=0) const;
